[package]
name = "issuance_tool"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies] 
base64 = "0.13.0"
ic-types = "0.1.2"
ic-cdk = "0.3.0"
ic-cdk-macros = "0.3.0"
ic-certified-map = "0.1.0"

candid = "0.6.19"
libflate = "1"
num-traits = "0.2.14"
serde = "1.0.116"
serde_cbor = "0.11"
serde_bytes = "0.11"
serde_with = "1.6.2"

[build-dependencies]
sha2 = "0.9.1"
